resources/css/app.scss
/*
- black + purple
- http://www.colourlovers.com/palette/85900/Midnight_Sex

- grey: color: rgba(39,58,75,.97);
- darkest-purple: #341931;
- darker-purple: #571B3C;
- lighter-purple: #7A1E48;
- lightest-purple: #9D2053;
*/

@import "bootstrap/scss/bootstrap";

body {
    font-family: system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;

    color: #333;
    font-size: 18px;
    line-height: 1.5em;
}

html, body {
    max-width: 100%;
    overflow-x: hidden;
    margin-bottom: 3em;
}

/*!* Typography *!*/
h1, h2, h3 {
    font-weight: bold;
    font-family: 'Source Sans Pro',"Helvetica Neue",Helvetica,Arial,sans-serif;
}

h1 a,  h1 a:focus, h2 a, h2 a:focus, h3 a, h3 a:hover {
    text-decoration: underline;
}

h1 a:hover, h2 a:hover, h3:hover, h1 a:focus, h2 a:focus, h3 a:focus {
    text-decoration: none;
}

h1 {
    font-size: 2.8rem;
    margin: .7em 0 .2em 0;
    line-height: 1.2em;
    text-align: center;
    padding-bottom: 1em;
}

h2 {
    font-size: 1.9rem;
    margin: 1.3em 0 .6em;
    line-height: 1.3em;
}

h3 {
    font-size: 1.6rem;
    margin: 1.2em 0 .4em;
}

h3 a, h2 a, a, h2 a:active, h3 a:active, a:active {
    color: rgba(26, 137, 23, 1);
    text-decoration: underline;
}

h3 a:hover, h2 a:hover, a:hover, h3 a:focus, h2 a:focus, a:focus {
    color: rgba(15, 115, 12, 1);
    text-decoration: none;
}

a:focus {
    outline: 5px auto -webkit-focus-ring-color;
    outline-offset: -2px;
}

hr {
    margin: 1.2em 0;
    border: 0;
    border-top: 1px solid #eeeeee;
}

p {
    margin-bottom: .5em;
}

ul {
    margin-top: 0;
    margin-bottom: .5em;
}

#menu {
    font-size: 1.1em;
    padding: 1.3em 1em;
    margin-bottom: 2em;
    border-bottom: 7px solid rgba(51, 51, 51, 0.68);
}

@media (min-width: 992px) {
    .container {
        max-width: 1000px;
    }
}

.card-bigger {
    font-size: 1.1em;
    margin-top: .8em;
    margin-bottom: .8em;
    line-height: 1.6em;
}

/* article helpers */
.bigger {
    font-size: 1.2em;
    line-height: 1.6em;
}

img {
    max-width: 100%;
}

.img-thumbnail {
    margin-bottom: .7em;
}

.shadow {
    box-shadow: 1px 2px 15px -2px rgb(0 0 0/20%);
}

.blockquote {
    margin-bottom: 2em;
    margin-top: 2em;
    line-height: 1.6em;
    font-size: 1.4em;
    color: #555;
}

.blockquote-smaller {
    font-size: 1.6rem;
}

/* style in cards */
.pull-right {
    float: right;
}

.post {
    font-size: 1.3rem;
    /* inspiration https://christoph-rumpel.com/2020/8/refactoring-php */
    /*font-family: system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;*/

    line-height: 1.6em;
}

#post {
    img {
        text-align: center;
        margin: .5em auto 1.5em auto;
    }

    ol {
        margin-top: 1.5rem;
        margin-left: 1.5rem;
        padding-left: 0;

        li {
            margin-top: 2rem;
        }
    }
}
/* @see https://stackoverflow.com/a/50174132/1348344 */
.container li {
    margin-bottom: .4em;
}

.container li:last-child {
    margin-bottom: 0;
}

.container ul {
    padding-left: 1.2em;
}

.container ul li {
    line-height: 1.6em;
}

.post li {
    margin-left: -1em;
}

table ul {
    margin-left: 1em;
    padding-left: 0;
}

#footer {
    font-size: 1.1em;
    padding: 1.5em 0;
    margin-top: 4em;
    border-top: 5px solid #999;
}

.btn {
    cursor: pointer;
}

#post {
    font-size: 1.2em;

    p, li {
        line-height: 1.5em;
    }

    p.text-muted {
        font-size: 0.9em;
        padding-top: .6em;
        padding-bottom: .2em;
    }

    h1 {
        margin: 6rem 0 3rem;
    }
}



.thead-inverse th h3 {
    color: #DDD;
    margin: 0;
    font-size: 2em;
    line-height: 1.7em;
}

.thead-inverse a, .thead-inverse a:visited, #content .thead-inverse a:visited:not(.btn):not(.badge), .badge-info a, .badge-info a:visited {
    color: #DDD;
    text-decoration: underline;
    /*font-weight: normal;*/
}

.thead-inverse a:hover, .badge-info a:hover {
    color: white;
    text-decoration: none;
}

/* @see https://stackoverflow.com/a/48309999/1348344 */
nobr {
    white-space: nowrap;
    hyphens: none;
}

.bg-success a, .bg-success a:active {
    color: white;
    text-decoration: underline;
}

.bg-success a:focus, .bg-success a:hover {
    color: white;
    text-decoration: none;
}

a.btn-dark, a.btn-dark:active {
    color: #FFF;
}

a.btn:hover {
    text-decoration: none;
}

a.btn {
    line-height: 1.6em;
    text-decoration: none;
}

.post-list-title {
    padding-top: .4em;
    font-size: 1.4em;
    line-height: 1.8em;
    padding-left: .4em;
}

.text-bigger {
    font-size: 1.2em;
    line-height: 1.5em;
}

.btn-sm {
    font-size: .9em;
}

.text-danger > a {
    color: #dc3545;
}

.blockquote-footer {
    margin-top: 1em;
}

.article-row {
    padding-top: 1.2em;
    padding-bottom: 1.3em;
}

.homepage-face {
    width: 10em;
    height: 10em;
}

.homepage-logo {
    width: 5em;
    height: 5em;
}

.post-snippet {
    font-size: 1.05rem;
    line-height: 1.6rem;
}

/* mobile optimization */
@media (max-width: 768px) {
    .homepage-face {
        width: 7em;
        height: 7em;
    }

    .homepage-logo {
        width: 3em;
        height: 3em;
    }

    #menu {
        font-size: 1.1rem;
        line-height: 2.2em;
    }

    .text-bigger {
        font-size: 1.3rem;
        line-height: 1.3em;
    }

    .container {
        max-width: 100%;
    }

    h1 {
        font-size: 1.9rem;
    }

    h2 {
        font-size: 1.6rem;
    }

    h3 {
        font-size: 1.3rem;
    }

    blockquote.blockquote {
        font-size: 1.3rem;
    }

    .post-list-title {
        font-size: 1.3rem;
    }

    .card-bigger {
        font-size: 1.2rem;
        line-height: 1.5em;
    }
}

.blockquote-book {
    line-height: 1.4em;
}

pre.shiki {
    margin: 1.5em 0 1em;
    border-radius: .3rem;
    padding: 1.5em 1.2em;
    border: 2px solid #ffe294;
}

.nobr {
    white-space: nowrap;
}

// hightlight date, stolen from https://honzajavorek.cz/ :)
.highlight-date {
    float: left;
    width: 4rem;
    height: 4rem;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 100%;
    background-color: #EEE;
    font-size: 1rem;
    margin-right: 1rem;
    flex-shrink: 0;
}

